--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,55 +9,109 @@
     tools:showIn="@layout/activity_main"
     android:padding="16dp">
 
-    <ImageView
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/trafikklys"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/trafikklys_gronn"
+            android:layout_width="wrap_content"
+            android:layout_height="76dp"
+            android:layout_alignParentStart="true"
+            android:contentDescription="@string/happy_face"
+            android:cropToPadding="false"
+            android:fitsSystemWindows="false"
+            android:padding="8dp"
+            android:src="@drawable/ic_sentiment_satisfied_green_60dp"
+            app:layout_constraintBottom_toTopOf="@+id/trafikklys_gul"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:clickable="true"
+            android:focusable="true"/>
+
+        <ImageView
+            android:id="@+id/trafikklys_gul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/neutral_face"
+            android:cropToPadding="false"
+            android:padding="8dp"
+            android:fitsSystemWindows="false"
+            android:src="@drawable/ic_sentiment_neutral_yellow_60dp"
+            app:layout_constraintTop_toBottomOf="@id/trafikklys_gronn"
+            app:layout_constraintStart_toStartOf="@id/trafikklys_gronn"
+            android:clickable="true"
+            android:focusable="true"
+            />
+
+        <ImageView
+            android:id="@+id/trafikklys_rod"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/angry_face"
+            android:cropToPadding="false"
+            android:padding="8dp"
+            android:fitsSystemWindows="false"
+            android:src="@drawable/ic_sentiment_dissatisfied_red_60dp"
+            app:layout_constraintStart_toStartOf="@id/trafikklys_gul"
+            app:layout_constraintTop_toBottomOf="@id/trafikklys_gul"
+            android:clickable="true"
+            android:focusable="true"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="TODO"
-        android:cropToPadding="false"
-        android:fitsSystemWindows="false"
-        android:src="@drawable/barnehage1" />
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <EditText
+            android:id="@+id/spisested_sokenavn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="@string/sok_spisested" />
+
+        <EditText
+            android:id="@+id/poststed_sokenavn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:ems="10"
+            android:inputType="text"
+            android:hint="@string/sok_poststed"
+            android:layout_below="@id/spisested_sokenavn" />
+
+        <Button
+            android:id="@+id/sok_knapp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/poststed_sokenavn"
+            android:layout_marginTop="24dp"
+            android:drawableStart="@drawable/ic_button_sok"
+            android:text="@string/sok" />
+
+        <Button
+            android:id="@+id/vis_her_knapp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/sok_knapp"
+            android:layout_alignStart="@id/sok_knapp"
+            android:layout_marginTop="24dp"
+            android:drawableStart="@drawable/ic_button_her"
+            android:text="@string/sok_her" />
 
 
-    <EditText
-        android:id="@+id/spisested_sokenavn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="@string/sok_spisested"
-        android:layout_below="@id/trafikklys"
-        android:layout_margin="8dp"/>
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/poststed_sokenavn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="@string/sok_poststed"
-        android:layout_below="@id/spisested_sokenavn"
-        android:layout_margin="8dp"/>
-
-    <Button
-        android:id="@+id/sok_knapp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/poststed_sokenavn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:drawableStart="@drawable/ic_button_sok"
-        android:text="@string/sok" />
-
-    <Button
-        android:id="@+id/vis_her_knapp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/sok_knapp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:drawableStart="@drawable/ic_button_her"
-        android:text="@string/sok_her" />
 
 
 </RelativeLayout>
