Satt opp expandablelistview via expandableListadapter. Funker fjell! Før start på preferencefragment.

--- a/app/src/main/res/layout/list_group_tilsyn.xml
+++ b/app/src/main/res/layout/list_group_tilsyn.xml
@@ -1,24 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="16dp"
+    android:background="#2200838F"
 
-    <TextView
-        android:id="@+id/tema_gruppe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:text="@string/temagruppe"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tema_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginHorizontal="16dp"
-        android:layout_weight="1"
-        android:text="@string/placeholder"
-        android:textStyle="bold" />
+    >
 
     <ImageView
         android:id="@+id/tema_karakter"
@@ -27,6 +14,27 @@
         android:adjustViewBounds="false"
         android:cropToPadding="false"
         android:src="@drawable/ic_highlight_off_blue_60dp" />
+
+    <TextView
+        android:id="@+id/tema_gruppe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="16dp"
+        android:text="@string/temagruppe"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tema_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="1"
+        android:text="@string/placeholder"
+        android:textStyle="bold" />
+
+
 
 
 </LinearLayout>
