--- a/app/src/main/res/layout/tilsyn_detail.xml
+++ b/app/src/main/res/layout/tilsyn_detail.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".TilsynDetailFragment" >
 
     <ExpandableListView
         android:id="@+id/expListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="1000dp"
+        android:groupIndicator="@null"/>
 
 </LinearLayout>
 
