--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -9,6 +9,13 @@
     tools:showIn="@layout/activity_main"
     android:padding="16dp">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/mattilsynet_logo_tiny1"/>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/trafikklys"
@@ -54,8 +61,8 @@
             android:padding="8dp"
             android:fitsSystemWindows="false"
             android:src="@drawable/ic_sentiment_neutral_yellow_60dp"
-            app:layout_constraintTop_toBottomOf="@id/trafikklys_gronn"
-            app:layout_constraintStart_toStartOf="@id/trafikklys_gronn"
+            app:layout_constraintBottom_toBottomOf="@id/trafikklys_gronn"
+            app:layout_constraintStart_toEndOf="@id/trafikklys_gronn"
             android:clickable="true"
             android:focusable="true"
             />
@@ -69,16 +76,18 @@
             android:padding="8dp"
             android:fitsSystemWindows="false"
             android:src="@drawable/ic_sentiment_dissatisfied_red_60dp"
-            app:layout_constraintStart_toStartOf="@id/trafikklys_gul"
-            app:layout_constraintTop_toBottomOf="@id/trafikklys_gul"
+            app:layout_constraintStart_toEndOf="@id/trafikklys_gul"
+            app:layout_constraintBottom_toBottomOf="@id/trafikklys_gul"
             android:clickable="true"
             android:focusable="true"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="16dp"
         android:orientation="vertical"
         android:padding="16dp">
 
@@ -140,8 +149,6 @@
             android:id="@+id/vis_her_knapp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sok_knapp"
-            android:layout_alignStart="@id/sok_knapp"
             android:layout_marginTop="24dp"
             android:drawableStart="@drawable/ic_button_her"
             android:text="@string/sok_her" />
