--- a/app/src/main/res/layout/spisested_card.xml
+++ b/app/src/main/res/layout/spisested_card.xml
@@ -12,8 +12,9 @@
 
         <TextView
             android:id="@+id/navn_card"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/karaktervisning"
             android:paddingTop="8dp"
             android:text="@string/placeholder"
             android:textSize="18sp"
@@ -28,6 +29,7 @@
             android:text="@string/placeholder" />
 
         <LinearLayout
+            android:id="@+id/karaktervisning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
