--- a/app/src/main/res/layout-sw600dp/activity_sokeliste.xml
+++ b/app/src/main/res/layout-sw600dp/activity_sokeliste.xml
@@ -8,15 +8,15 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/appBar_large"
+        android:foreground="@drawable/mattilsynet_logo"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            android:foreground="@drawable/mattilsynet_logo"
             app:layout_scrollFlags="scroll"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
