--- a/app/src/main/res/layout-land/activity_sokeliste.xml
+++ b/app/src/main/res/layout-land/activity_sokeliste.xml
@@ -14,9 +14,8 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            android:foreground="@drawable/mattilsynet_logo"
             app:layout_scrollFlags="scroll"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
