--- a/app/src/main/res/layout-land/activity_tilsyn_list.xml
+++ b/app/src/main/res/layout-land/activity_tilsyn_list.xml
@@ -10,8 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:foreground="@drawable/mattilsynet_logo"
+        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
@@ -33,15 +32,25 @@
         <include layout="@layout/spisested_card" />
     </FrameLayout>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/app_bar"
+        android:layout_margin="16dp"
+        android:src="@drawable/mattilsynet_logo_tiny1"
+         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <RelativeLayout
         android:id="@+id/resultatframe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/card_frame"
         android:layout_marginTop="8dp"
-        android:paddingHorizontal="16dp">
-
+        android:layout_marginBottom="8dp"
+        android:paddingHorizontal="16dp"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/frame_dato"
@@ -50,88 +59,76 @@
             android:padding="8dp"
             android:text="@string/placeholder"
             android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textStyle="bold" />
+
 
         <TextView
             android:id="@+id/frame_tema1"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/frame_dato"
+            android:layout_alignParentStart="true"
             android:padding="8dp"
-            android:text="@string/placeholder"
-            app:layout_constraintEnd_toStartOf="@+id/frame_tema2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/frame_dato" />
+            android:text="@string/placeholder" />
 
         <TextView
             android:id="@+id/frame_tema2"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/frame_tema1"
+            android:layout_alignParentEnd="true"
             android:padding="8dp"
-            android:text="@string/placeholder"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/frame_tema1"
-            app:layout_constraintTop_toBottomOf="@id/frame_dato" />
+            android:text="@string/placeholder" />
 
         <TextView
             android:id="@+id/frame_tema3"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/frame_tema1"
             android:padding="8dp"
-            android:text="@string/placeholder"
-            app:layout_constraintEnd_toStartOf="@+id/frame_tema4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/frame_tema1" />
+            android:text="@string/placeholder" />
 
         <TextView
             android:id="@+id/frame_tema4"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/frame_tema2"
+            android:layout_alignParentEnd="true"
             android:padding="8dp"
-            android:text="@string/placeholder"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/frame_tema3"
-            app:layout_constraintTop_toBottomOf="@id/frame_tema2" />
+            android:text="@string/placeholder" />
 
+        />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/card_frame"
 
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/velg_tilsynsdato"
+        android:textSize="18sp"
+        android:textStyle="bold"></TextView>
+
+    <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/resultatframe"
+        android:layout_below="@id/tv"
         android:paddingHorizontal="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:visibility="visible">
 
-        <TextView
-            android:id="@+id/tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"
-            android:text="@string/velg_tilsynsdato"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
 
         <include
             layout="@layout/tilsyn_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv"
+
             tools:visibility="visible" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 
 </RelativeLayout>
 
