--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -1,103 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main"
-    android:padding="16dp">
+    android:padding="16dp" >
+
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/mattilsynet_logo_tiny1"/>
+        android:src="@drawable/mattilsynet_logo_tiny1"
+        android:layout_gravity="bottom"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/trafikklys"
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        android:visibility="visible">
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:button="@drawable/checkbox_selector"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/trafikklys_rod" />
-
-        <ImageView
-            android:id="@+id/trafikklys_gronn"
-            android:layout_width="wrap_content"
-            android:layout_height="76dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="32dp"
-            android:clickable="true"
-            android:contentDescription="@string/happy_face"
-            android:cropToPadding="false"
-            android:fitsSystemWindows="false"
-            android:focusable="true"
-            android:padding="8dp"
-            android:src="@drawable/ic_sentiment_satisfied_green_60dp"
-            app:layout_constraintBottom_toTopOf="@+id/trafikklys_gul"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/trafikklys_gul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/neutral_face"
-            android:cropToPadding="false"
-            android:padding="8dp"
-            android:fitsSystemWindows="false"
-            android:src="@drawable/ic_sentiment_neutral_yellow_60dp"
-            app:layout_constraintBottom_toBottomOf="@id/trafikklys_gronn"
-            app:layout_constraintStart_toEndOf="@id/trafikklys_gronn"
-            android:clickable="true"
-            android:focusable="true"
-            />
-
-        <ImageView
-            android:id="@+id/trafikklys_rod"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/angry_face"
-            android:cropToPadding="false"
-            android:padding="8dp"
-            android:fitsSystemWindows="false"
-            android:src="@drawable/ic_sentiment_dissatisfied_red_60dp"
-            app:layout_constraintStart_toEndOf="@id/trafikklys_gul"
-            app:layout_constraintBottom_toBottomOf="@id/trafikklys_gul"
-            android:clickable="true"
-            android:focusable="true"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="16dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginHorizontal="32dp"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_anchorGravity="center_horizontal"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp">
+
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="16dp"
+            android:text="@string/header"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <EditText
             android:id="@+id/spisested_sokenavn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/header"
             android:ems="10"
             android:hint="@string/sok_spisested"
-            android:inputType="text" />
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:paddingTop="16dp" />
 
         <EditText
             android:id="@+id/poststed_sokenavn"
@@ -106,42 +58,41 @@
             android:layout_below="@id/spisested_sokenavn"
             android:ems="10"
             android:hint="@string/sok_poststed"
+            android:importantForAutofill="no"
             android:inputType="text"
             android:paddingTop="16dp" />
 
-        <LinearLayout
+
+        <TextView
+            android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal">
+            android:layout_alignBottom="@id/spisested_sokenavn"
+            android:layout_toEndOf="@id/spisested_sokenavn"
+            android:paddingHorizontal="32dp"
+            android:paddingVertical="8dp"
+            android:text="@string/velg_arstall"
+            android:textSize="14sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="8dp"
-                android:paddingVertical="8dp"
-                android:text="Velg årstall"
-                android:textSize="14sp" />
-
-            <Spinner
-                android:id="@+id/arstall_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:paddingHorizontal="8dp"
-                android:paddingVertical="8dp"
-                android:spinnerMode="dialog" />
-
-
-        </LinearLayout>
-
+        <Spinner
+            android:id="@+id/arstall_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv1"
+            android:layout_alignStart="@id/tv1"
+            android:layout_marginStart="16dp"
+            android:paddingHorizontal="32dp"
+            android:paddingVertical="16dp"
+            android:spinnerMode="dialog" />
 
         <Button
             android:id="@+id/sok_knapp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/poststed_sokenavn"
+            android:layout_margin="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
             android:drawableStart="@drawable/ic_button_sok"
             android:text="@string/sok" />
 
@@ -149,13 +100,68 @@
             android:id="@+id/vis_her_knapp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/sok_knapp"
             android:layout_marginTop="24dp"
+            android:layout_toEndOf="@id/sok_knapp"
             android:drawableStart="@drawable/ic_button_her"
             android:text="@string/sok_her" />
+    </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/trafikklys"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:id="@+id/trafikklys_gronn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:clickable="true"
+            android:contentDescription="@string/happy_face"
+            android:cropToPadding="false"
+            android:focusable="true"
+            android:padding="8dp"
+            android:src="@drawable/ic_sentiment_satisfied_green_60dp" />
+
+        <ImageView
+            android:id="@+id/trafikklys_gul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/trafikklys_gronn"
+            android:clickable="true"
+            android:contentDescription="@string/neutral_face"
+            android:cropToPadding="false"
+            android:fitsSystemWindows="false"
+            android:focusable="true"
+            android:padding="8dp"
+            android:src="@drawable/ic_sentiment_neutral_yellow_60dp" />
+
+        <ImageView
+            android:id="@+id/trafikklys_rod"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/trafikklys_gul"
+            android:clickable="true"
+            android:contentDescription="@string/angry_face"
+            android:cropToPadding="false"
+            android:fitsSystemWindows="false"
+            android:focusable="true"
+            android:padding="8dp"
+            android:src="@drawable/ic_sentiment_dissatisfied_red_60dp" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/trafikklys_rod"
+            android:button="@drawable/checkbox_selector"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
 
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</RelativeLayout>
