--- a/app/src/main/res/layout-sw600dp/activity_tilsyn_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_tilsyn_list.xml
@@ -94,8 +94,22 @@
             app:layout_constraintStart_toEndOf="@id/frame_tema3"
             app:layout_constraintTop_toBottomOf="@id/frame_tema2" />
 
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginVertical="16dp"
+            android:text="@string/velg_tilsynsdato"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/frame_tema3" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
@@ -106,18 +120,6 @@
         android:paddingHorizontal="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:visibility="visible">
-
-        <TextView
-            android:id="@+id/tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginVertical="16dp"
-            android:text="@string/velg_tilsynsdato"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
 
         <include
