--- a/app/src/main/res/layout/spisested_card.xml
+++ b/app/src/main/res/layout/spisested_card.xml
@@ -8,13 +8,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp">
 
         <TextView
             android:id="@+id/navn_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/karaktervisning"
+
             android:paddingTop="8dp"
             android:text="@string/placeholder"
             android:textSize="18sp"
@@ -27,32 +28,6 @@
             android:layout_below="@id/navn_card"
             android:layout_alignStart="@id/navn_card"
             android:text="@string/placeholder" />
-
-        <LinearLayout
-            android:id="@+id/karaktervisning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/dato_card"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/placeholder" />
-
-            <ImageView
-                android:id="@+id/karakter_card"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:drawingCacheQuality="high"
-                tools:srcCompat="@drawable/ic_highlight_off_blue_60dp" />
-
-        </LinearLayout>
-
-
 
         <TextView
             android:id="@+id/adresse_card"
@@ -78,6 +53,30 @@
             android:layout_below="@id/adresse_card"
             android:layout_toEndOf="@id/postnr_card"
             android:text="@string/placeholder" />
+
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/dato_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/placeholder" />
+
+            <ImageView
+                android:id="@+id/karakter_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:drawingCacheQuality="high"
+                tools:srcCompat="@drawable/ic_highlight_off_blue_60dp" />
+
+        </LinearLayout>
 
 
     </RelativeLayout>
