Filtrering på navn ok, layouts ferdig-ish. Mulig starter på filtrering på karakter

--- a/app/src/main/res/layout-land/activity_sokeliste.xml
+++ b/app/src/main/res/layout-land/activity_sokeliste.xml
@@ -17,7 +17,10 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
