--- a/app/src/main/res/layout/content_sokeliste.xml
+++ b/app/src/main/res/layout/content_sokeliste.xml
@@ -8,10 +8,19 @@
     tools:context=".SokelisteActivity"
     tools:showIn="@layout/activity_sokeliste">
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:queryHint="@string/filter_query_hint"
+        app:defaultQueryHint="@string/filter_query_hint"
+        android:layout_margin="8dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/spisested_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp" />
+        android:layout_margin="8dp"
+        android:layout_below="@id/search_view"/>
 
 </RelativeLayout>
