--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <integer name="list_columns">1</integer>
     <dimen name="appBar_large">300dp</dimen>
+    <integer name="list_columns">1</integer>
+    <integer name="tilsynlist_columns">2</integer>
 </resources>
