--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -17,7 +17,8 @@
         android:layout_alignParentBottom="true"
         android:src="@drawable/mattilsynet_logo_tiny1"
         android:layout_gravity="bottom"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/liten_logo"/>
 
 
     <RelativeLayout
@@ -111,7 +112,7 @@
         android:id="@+id/trafikklys"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:orientation="vertical">
 
 
@@ -120,7 +121,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:clickable="true"
             android:contentDescription="@string/happy_face"
             android:cropToPadding="false"
             android:focusable="true"
@@ -131,8 +131,6 @@
             android:id="@+id/trafikklys_gul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/trafikklys_gronn"
-            android:clickable="true"
             android:contentDescription="@string/neutral_face"
             android:cropToPadding="false"
             android:fitsSystemWindows="false"
@@ -144,8 +142,6 @@
             android:id="@+id/trafikklys_rod"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/trafikklys_gul"
-            android:clickable="true"
             android:contentDescription="@string/angry_face"
             android:cropToPadding="false"
             android:fitsSystemWindows="false"
@@ -153,12 +149,7 @@
             android:padding="8dp"
             android:src="@drawable/ic_sentiment_dissatisfied_red_60dp" />
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/trafikklys_rod"
-            android:button="@drawable/checkbox_selector"
-            android:visibility="invisible" />
+
 
     </LinearLayout>
 
